--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 html{
   height: 100%;
-  background-image: linear-gradient(#ff6161,#ff768c);
+  background-image: linear-gradient(red 0%, orange 10%, orange 30%, yellow 50%, yellow 70%, green 90%, green 100%);
   background-repeat: no-repeat;
   font-family: sans-serif;
   color: #0f222d;
